added initializing the DB